@@ -2,6 +2,12 @@
 1.0805427490386563567297010582115146397 E-14
 8.3049286655793859421463034969090657184 E-24
 0.E-38
+1.4438595832024935822048821024627975338 E176 - 0.007604873640076879235921450
+0852227734477*I
+1.4438595832024935822048821024627975338 E176 - 0.007604873640076879235921450
+0852227734503*I
+1.4438595832024935822048821024627975338 E176 + 4.224359849833025384459047779
+8091011921 E107*I
 -0.0096304981549875294045330406967324266080 + 0.0104448408245333075664155335
 90425336553*I
 3.6835977616820321802351926205081189877 E-46
@@ -35,4 +41,4 @@
   ***   at top-level: eint1(0)
   ***                 ^--------
   *** eint1: domain error in eint1: x = 0
-Total time spent: 487
+Total time spent: 500
