@@ -33,6 +33,9 @@ incgam(1/2,10^8)
 incgam(-3,20)
 incgam(1/5,50)
 incgamc(2,0)
+incgam(110.0,I)
+incgam(110,I)
+incgam(110.0,10*I)
 
 eint1(-0.3-95*I)
 eint1(100)
